--- a/MarketPlace/appsettings.json
+++ b/MarketPlace/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server = danone703.mssql.somee.com;database = danone703;TrustServerCertificate=true; User Id= Egnrhn_SQLLogin_1; Password= nf8c61k2uw"
+    "DefaultConnection": "cnn"
   },
   "AllowedHosts": "*"
 }
