--- a/MarketPlace/Properties/launchSettings.json
+++ b/MarketPlace/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://192.168.0.199:5262",
-      "sslPort": 5263
+      "applicationUrl": "https://192.168.0.199:5000",
+      "sslPort": 5000
     }
   },
   "profiles": {
@@ -15,14 +15,17 @@
       "applicationUrl": "http://192.168.0.199:5262",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "sslPort": 5000
     },
+
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "sslPort": 5000
     }
   }
 }
